[package]
name = "day-log"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.8", features = ["multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["fs", "compression-gzip", "set-header", "compression-br"] }
git2 = { version = "0.20.4", features = ["vendored-libgit2", "vendored-openssl"] }
serde_json = "1"
sha2 = "0.10"